--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -135,7 +135,7 @@ div.note {
 	border: 1px solid #000;
 	margin: 6px 0px;
 	padding: 4px;
-	width: 100%;
+	width: 96%;
 }
 
 /* EO manage_page_style.css */
@@ -152,7 +152,9 @@ body.zmi {
 body.zmi div.zmi {
 	width: 800px;
 }
-
+body.zmi img { 
+	border:0
+}
 h1 {
 	font-size: 1.5em;
 	line-height: 2.2em;
@@ -567,6 +569,7 @@ input.form-submit {
 	font-size: 11px;
 	font-family: Arial, Helvetica, sans-serif;
 	color: #000;
+	text-align:left;
 }
 
 .collectionBtn {
