--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -5,23 +5,23 @@
 
 /* BO manage_page_style.css */
 h1, h2, h3 {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 }
 
 .form-help {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size:11px;
 	padding:4px 6px 0px 6px;
 }
 
 .std-text {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 11px;
 	color: #333;
 }
 
 .tab-small {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 	font-size: 10px;
 	color: #333;
 }
@@ -32,7 +32,7 @@ h1, h2, h3 {
 }
 
 .strong-header {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 11px;
 	font-weight: bold;
 	background-color: black;
@@ -45,12 +45,12 @@ h1, h2, h3 {
 }
 
 .list-item {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 	font-size: 11px;
 }
 
 .list-nav {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 	font-size: 11px;
 	font-weight: bold;
 }
@@ -72,23 +72,21 @@ h1, h2, h3 {
 }
 
 .form-title {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 	font-weight: bold;
 	font-size: 11px;
 	color: #333;
 }
 
 .form-label {
-	font-family: Arial, Helvetica, sans-serif; 
-	font-weight: bold;
+	font-family: Arial, sans-serif; 
+	font-weight: normal;
 	font-size: 12px; 
-	color: #333;
-	padding: 0px 2px;
 	color:#666;
 }
 
 .form-optional {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 	font-weight: bold;
 	font-style: italic;
 	font-size: 12px;
@@ -96,7 +94,7 @@ h1, h2, h3 {
 }
 
 .form-element {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 12px;
 	color: #000;
 }
@@ -114,7 +112,7 @@ h1, h2, h3 {
 }
 
 .form-text {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 12px;
 	color: #333;
 }
@@ -141,11 +139,12 @@ div.note {
 /* EO manage_page_style.css */
 
 body.zmi {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
 	border: 0;
-	background: transparent;
+	background: transparent!important;
+	background-color: #6598cd!important;
 	font-size: 66%;
 }
 
@@ -177,16 +176,16 @@ h3 {
 }
 
 a.zmi {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-weight: normal;
 	text-decoration: underline;
 }
 a.zmi, a.zmi:link, a.zmi:visited {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	color: #000;
 }
 a.zmi:hover, a.zmi:active {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	color: #f90;
 }
 
@@ -231,65 +230,50 @@ a.zmi:hover, a.zmi:active {
 	background:url(/misc_/zms/get_logo_gradient.gif) top right repeat-y;
 }
 
-.zmi_header, 
-.zmi_footer {
-	vertical-align: middle;
-	color: #eee;
-	font-size: 10px;
-	height: 20px;
-	margin:0px;
-	padding:0px;
+/* @see http://css-tricks.com/how-to-resizeable-background-image/ */
+img#zmibg {
+	z-index:-1000;
+	width: 100%;
+	height: 101%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 
 .zmi_header {
-	color: #f90;
+	vertical-align: middle;
+	background-color:#777;
+	color: #eee;
+	font-size: 10px;
+	height: 20px;
+	margin: 0;
+	padding: 0;
 }
 
-.zmi_header a:link, .zmi_header a:visited, 
-.zmi_footer a:link, .zmi_footer a:visited {
+.zmi_header a:link, .zmi_header a:visited {
 	text-decoration: none;
 	color: #eee;
 	font-size: 10px;
 }
-.zmi_footer a:hover {
+.zmi_header a:hover {
 	text-decoration: underline;
-	color: #fff;
+	color: #f90;
 }
-.zmi_footer {
-	line-height:12px;
-}
-
-.zmi_footer a#strong {
-	color: #fff;
+.zmi_header a#strong {
 	font-weight:bold;
 }
 
-
-.zmi_footer select {
-	background: #000;
+.zmi_header select {
+	background: #777;
 	color: #fff;
 	font-size: 10px;
-	border:0px;
-	padding:0px;
-	margin:0px;
+	border: 1px solid #ccc;
 /* IE-Patch */
 	margin-top:-3px;
-	height: 18px;
 }
 
-html {
-	overflow-y: scroll;
-	background: #5f5f5f url('/misc_/zms/html_bg.png') repeat-x scroll;
-}
-
-/* only FF: Patch deactivated */
-html>/**/body .zmi_footer select {
-	height: 14px !important;
-	margin-top:0px !important;
-}
-
-.zmi_footer div.zmi_col_left,
-.zmi_footer div.zmi_col_right {
+.zmi_header div.zmi_col_left,
+.zmi_header div.zmi_col_right {
 	margin:3px;
 }
 
@@ -436,14 +420,10 @@ a.button:hover img.button1, a.button:active img.button1 {
 	height:27px;
 }
 
-#ZMIManageTabsContainer,#ZMIManageTabsSubContainer {
+#ZMIManageTabsContainer {
 	clear:both;
 }
-#ZMIManageTabsSubContainer {
-	width:100%;
-	background-color:#DDD;
-	height:22px;
-}
+
 #ZMIManageTabsButtons{
 	float:left;
 	display: inline;
@@ -498,7 +478,7 @@ a.button:hover img.button1, a.button:active img.button1 {
 }
 
 .form-disabled {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 12px;
 	color: gray;
 }
@@ -509,7 +489,7 @@ a.button:hover img.button1, a.button:active img.button1 {
 
 .form-small {
 	font-size: 11px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	color: #000;
 }
 
@@ -518,14 +498,14 @@ a.button:hover img.button1, a.button:active img.button1 {
 }
 
 .form-label-disabled {
-	font-family: Arial, Helvetica, sans-serif; 
+	font-family: Arial, sans-serif; 
 	font-weight: bold;
 	font-size: 12px;
 	color: gray;
 }
 
 .form-small-disabled {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 	font-size: 11px;
 	color: gray;
 }
@@ -585,7 +565,7 @@ textarea {
 }
 
 input {
-	font: 100% Arial, Helvetica, sans-serif;
+	font: 100% Arial, sans-serif;
 	border: 1px solid #666;
 	color: black;
 	vertical-align: middle;
@@ -594,8 +574,8 @@ input {
 }
 
 select {
-	font: 100% Arial, Helvetica, sans-serif;
-	border: 1px solid #666666;
+	font: 100% Arial, sans-serif;
+	border: 1px solid #666;
 	color: black;
 	vertical-align: top;
 }
@@ -622,9 +602,10 @@ input.lazy {
  */
 
 div#tabs, div#tabs ul.ui-tabs-nav { float:left; }
+div#tabs_sub ul.ui-tabs-nav li a { padding:3px 5px 3px 5px; }
 div.ui-tabs { margin:0; padding:0; border:0; background:transparent; }
 ul.ui-tabs-nav { margin:0; padding:0; border:0; background:transparent; }
-ul.ui-tabs-nav li a { font-size: 10px; text-decoration: none; }
+ul.ui-tabs-nav li a { font-family:Arial, sans-serif; font-size:11px !important; font-weight: normal; text-decoration: none; }
 .ui-widget-header { vertical-align: middle; padding: 2px 4px 2px 4px; }
 ul#icons { margin: 0; padding: 0; }
 ul#icons li { position: relative; margin: 2px 2px 4px 2px; padding: 0px; cursor: pointer; float: left; list-style: none; }
