--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -324,14 +324,6 @@ table.zmiHeadline tr td div, td.zmiHeadline, div.zmiHeadline {
 div.zmiHeadline img {
 	vertical-align:bottom;
 }
-.zmiDelimiter {
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	padding-left: 3px;
-	height: 22px;
-	line-height: 22px;
-	border-bottom: 1px solid #FFF; /* zmiNeutralColorWhite */
-}
 
 /* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  * +- Button
@@ -464,7 +456,8 @@ a.button:hover img.button1, a.button:active img.button1 {
  * +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  */
 
-.zmi-form-section.ui-accordion {
+.zmi-form-section.ui-accordion,
+.zmi-form-section.ui-widget-header {
 	margin-top:4px;
 }
 .zmi-form-section.ui-widget-content {
@@ -516,13 +509,6 @@ a.button:hover img.button1, a.button:active img.button1 {
 	width: 40px;
 }
 
-.form-label-disabled {
-	font-family: Arial, sans-serif; 
-	font-weight: bold;
-	font-size: 12px;
-	color: gray;
-}
-
 .form-small-disabled {
 	font-family: Arial, sans-serif;
 	font-size: 11px;
@@ -567,13 +553,15 @@ p.title, span.title {
 	width: 100%;
 }
 
-div.img-border {
-	border: 1px solid #000;
-}
- 
 form {
 	border: none;
 	margin: 0;
+}
+
+textarea.form-element, input.form-element, select.form-element,
+textarea.form-small, input.form-small, select.form-small {
+	font-family: Arial, sans-serif!important;
+	border: 1px solid #666!important;
 }
 
 textarea {
@@ -630,3 +618,4 @@ ul#icons { margin: 0; padding: 0; }
 ul#icons li { position: relative; margin: 2px 2px 4px 2px; padding: 0px; cursor: pointer; float: left; list-style: none; }
 ul#icons span.ui-icon {float: left; margin: 0; }
 .ui-button {position:static!important;}
+.ui-accordion-content { margin:0!important; padding:4px!important; }
