--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -589,8 +589,9 @@ input.lazy {
  */
 
 div#tabs, div#tabs ul.ui-tabs-nav { float:left; }
+div#tabs ul.ui-tabs-nav li a { padding-left:0.9em; padding-right:0.9em; }
 div.zmi-tabs.ui-widget-header { height:24px!important; }
-div.zmi-tabs.ui-widget-header ul.ui-tabs-nav { padding-top:4px!important; }
+div.zmi-tabs.ui-widget-header ul.ui-tabs-nav { padding-top:4px!important;}
 div.zmi-tabs.ui-widget-header ul.ui-tabs-nav li a { color:white; }
 div.ui-tabs { margin:0; padding:0; border:0; background:transparent; }
 ul.ui-tabs-nav { margin:0; padding:0; border:0; background:transparent; }
