--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -119,12 +119,15 @@ body.zmi.zmisitemap {
 	background-image:none !important;
 }
 
+#zmi_banner {
+	width:460px;
+	height:20px;
+	cursor:pointer;
+	background:url(<dtml-var MISC_ZMS>zms_banner.gif);
+}
+
 body.zmi div.zmi {
 	width: 800px;
-	/*
-	margin: 0 auto;
-	position: relative;
-	*/
 }
 
 body.zmi img {
@@ -194,6 +197,42 @@ a.zmi:hover, a.zmi:active {
 
 
 /* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+ * +- Maximize
+ * +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+ */
+
+body.zmi.maximized div.zmi {
+	width:auto;
+}
+
+#zmi_maximize {
+	width:13px;
+	height:11px;
+	cursor:pointer;
+	background:url(/++resource++zms_/img/maximize.png);
+}
+
+body.zmi.maximized #zmi_maximize {
+	background:url(/++resource++zms_/img/minimize.png);
+}
+
+body.zmi.maximized  #zmi_header,
+body.zmi.maximized  #zmi_logo,
+body.zmi.maximized  #ZMIManageTabsBar {
+ background-color:#fff !important;
+}
+body.zmi.maximized div.zmiRenderShort {
+ width:auto;
+}
+body.zmi.maximized td.zmiContainerColLeft a {
+ text-decoration:none;
+}
+body.zmi.maximized td.zmiContainerColLeft select {
+ display:block;
+ width:97% !important
+}
+
+/* +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  * +- Header / Footer
  * +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
  */
@@ -210,6 +249,10 @@ img#zmibg {
 	position: absolute;
 	top: 0;
 	left: 0;
+}
+
+#zmi_header .zmi-document-margin .zmi_col_left {
+	margin:0;
 }
 
 .zmi-document-margin {
@@ -407,16 +450,12 @@ a.button:hover img.button1, a.button:active img.button1 {
 	display: inline;
 	padding: 0;
 	margin: 0;
+	border: 1px solid transparent;
 	overflow: hidden;
 }
 #ZMIManageTabsButtons li.on{
-	border-top: solid #BBB 1px;
-	border-left: solid #BBB 1px;
-	border-right: solid #BBB 1px;
-	border-bottom: solid transparent 0px;
-	background-color:#E2E3DE;
-	padding: 0;
-	margin: 0;
+	border: 1px solid #BBB;
+	background-color:white;
 }
 #ZMIManageTabsButtons li a,
 #ZMIManageTabsButtons li span{
@@ -605,8 +644,9 @@ div.ui-tabs { margin:0; padding:0; border:0; background:transparent; }
 ul.ui-tabs-nav { margin:0; padding:0; border:0; background:transparent; }
 ul.ui-tabs-nav li a { font-family:Arial, sans-serif; font-size:11px !important; font-weight: normal; text-decoration: none; }
 .ui-widget-header { vertical-align: middle; padding: 2px 4px 2px 4px; }
+div.zmi-icon { margin: 0; padding: 0; width:16px; }
 ul.zmi-icons, ul#icons { margin: 0; padding: 0; }
-ul.zmi-icons li, ul#icons li { position: relative; margin: 2px 2px 4px 2px; padding: 0px; cursor: pointer; float: left; list-style: none; }
+ul.zmi-icons li, ul#icons li { position: relative; margin: 2px 2px 4px 2px; padding: 0; cursor: pointer; float: left; list-style: none; }
 ul.zmi-icons span.ui-icon, ul#icons span.ui-icon {float: left; margin: 0; }
 .ui-button {position:static!important;}
 .ui-accordion-content { margin:0!important; padding:4px!important; }
