--- a/ZMS/trunk/plugins/www/manage_page_style-min.css
+++ b/ZMS/trunk/plugins/www/manage_page_style-min.css
@@ -1,4 +1,129 @@
 
+h1,h2,h3{font-family:Arial,sans-serif}
+.form-help{font-family:Arial,sans-serif;font-size:11px;padding:4px 6px 0px 6px}
+.std-text{font-family:Arial,sans-serif;font-size:11px;color:#333}
+.list-header{background-color:#c0c0c0;border:none}
+.list-item{font-family:Arial,sans-serif;font-size:11px}
+.list-nav{font-family:Arial,sans-serif;font-size:11px;font-weight:bold}
+.row-normal{background-color:white;border:none}
+.row-hilite{background-color:#efefef;border:none}
+.section-bar{background-color:#c0c0c0;border:none}
+.form-title{font-family:Arial,sans-serif;font-weight:bold;font-size:11px;color:#333}
+.form-label{font-family:Arial,sans-serif;font-weight:normal;font-size:12px;color:#666}
+.form-element{font-family:Arial,sans-serif;font-size:12px;color:#000}
+.form-error{color:#FF0000;background-color:#FFF0F0;border:1px solid #FF0000}
+.form-warning{color:#808064;background-color:#FFFFE8;border:1px solid #808064}
+.form-text{font-family:Arial,sans-serif;font-size:12px;color:#333}
+div.note{font-size:11px;background-color:#ffffd0;color:black;border:1px solid #000;margin:6px 0px;padding:4px;width:96%}
+body.zmi{font-family:Arial,sans-serif;margin:0;padding:0;border:0;background:transparent!important;background-color:#6598cd!important;font-size:66%}
+body.zmi.zmisitemap{background-color:#fff !important;background-image:none !important}
+body.zmi.zmisitemap a{text-decoration:none}
+#zmi_banner{width:460px;height:20px;cursor:pointer;background:url(/misc_/zms/zms_banner.png)}
+body.zmi div.zmi{width:800px}
+body.zmi img{border:0}
+h1{font-size:1.5em;line-height:2.2em}
+h2{font-size:1.2em;line-height:1.5em}
+h3{font-size:1.1em;line-height:1.4em}
+a.zmi{font-family:Arial,sans-serif;font-weight:normal;text-decoration:underline}
+a.zmi,a.zmi:link,a.zmi:visited{font-family:Arial,sans-serif;color:#000}
+a.zmi:hover,a.zmi:active{font-family:Arial,sans-serif;color:#f90}
+.zmiTableRowSelected{background-color:#008!important}
+.zmiTableRowSelected>.form-small{color:white}
+.zmiTableRowOdd{background-color:#FEFEFE}
+.zmiTableRowEven{background-color:#F4F4F4}
+.zmiNeutralColorTrans{background-color:#0f0}
+.zmiNeutralColorWhite{background-color:#fff}
+.zmiNeutralColorBlack{background-color:#000}
+.zmiNeutralColorStrong0{background-color:#CCC}
+.zmiNeutralColorMedium0{background-color:#DDD}
+.zmiNeutralColorLight0{background-color:#EEE}
+.zmiNeutralColorLight1{background-color:#E2E3DE}
+.zmiTeaserColor{background-color:#BEDAFD!important}
+.zmiTeaserColor>.form-small{color:#222}
+.zmi_col_left{vertical-align:middle;text-align:left;float:left}
+.zmi_col_right{vertical-align:middle;text-align:right;float:right}
+body.zmi.maximized div.zmi{width:auto}
+#zmi_maximize{width:13px;height:11px;cursor:pointer;background:url(/++resource++zms_/img/maximize.png)}
+body.zmi.maximized #zmi_maximize{background:url(/++resource++zms_/img/minimize.png)}
+body.zmi.maximized #zmi_header,body.zmi.maximized #zmi_logo,body.zmi.maximized #ZMIManageTabsBar{background-color:#fff !important}
+body.zmi.maximized div.zmiRenderShort{width:auto}
+#zmi_logo{background:url(/misc_/zms/get_logo_gradient.png) top right repeat-y}
+#system_msg{padding:1em}
+img#zmibg{z-index:-1000;width:100%;height:101%;position:absolute;top:0;left:0}
+#zmi_header .zmi-document-margin .zmi_col_left{margin:0}
+.zmi-document-margin{vertical-align:middle;background-color:#777;color:#eee;font-size:10px;height:20px;margin:0;padding:0}
+.zmi-document-margin a:link,.zmi-document-margin a:visited{text-decoration:none;color:#eee;font-size:10px}
+.zmi-document-margin a:hover{text-decoration:underline;color:#f90}
+.zmi-document-margin span#strong{font-weight:bold;cursor:pointer;text-decoration:underline}
+.zmi-document-margin select{background:#777;color:#fff;font-size:10px;border:1px solid #ccc;margin-top:-3px}
+.zmi-document-margin div.zmi_col_left,.zmi-document-margin div.zmi_col_right{margin:3px}
+.zmiContainerColLeft{border-bottom:1px solid #CCC;background:filter:Alpha(opacity=80);-moz-opacity:0.80;opacity:0.80;width:200px}
+.zmiContainerColCenter{border-bottom:1px solid #FFF;background:#FFF filter:Alpha(opacity=85);-moz-opacity:0.85;opacity:0.85}
+.zmiContainerColRight{border-bottom:1px solid #FFF;background:#E2E3DE filter:Alpha(opacity=85);-moz-opacity:0.85;opacity:0.85;width:100px}
+div.zmiRenderShort{padding:3px;overflow:hidden;width:500px}
+div.zmi-headline{padding:2px 2px 2px 4px!important;background:url(/misc_/zms/spacer.gif)!important;background-color:#E2E3DE!important}
+.zmi-headline.ui-widget-header.ui-state-default{padding:2px 2px 2px 4px;background:url(/misc_/zms/spacer.gif);background-color:#E2E3DE}
+td div.zmi-headline,td>div.zmi-headline.ui-widget-header.ui-state-default{border:0!important}
+ 
+.zmi-button{width:20px!important;height:20px!important;padding:0!important;margin:0!important;cursor:pointer}
+img.vbutton,a.vbutton img{width:10px;height:20px}
+img.hbutton,a.hbutton img{width:20px;height:8px}
+a.button img{padding:2px;border:none}
+img.button,a.button:link img,a.button:visited img,img.vbutton,a.vbutton:link img,a.vbutton:visited img,img.hbutton,a.hbutton:link img,a.hbutton:visited img{border-top:solid 1px #E6E4E6;border-left:solid 1px #E6E4E6;border-right:solid 1px #B6B4B6;border-bottom:solid 1px #B6B4B6}
+a.button:hover img,a.button:active img,a.vbutton:hover img,a.vbutton:active img,a.hbutton:hover img,a.hbutton:active img{background-color:#E8E8E8;border-top:solid 1px #FFF;border-left:solid 1px #FFF;border-right:solid 1px #000;border-bottom:solid 1px #000}
+img.button0,a.button:link img.button0,a.button:visited img.button0{border-top:solid 1px #E6E4E6;border-left:solid 1px #E6E4E6;border-right:solid 1px #B6B4B6;border-bottom:solid 1px #B6B4B6}
+img.button1,a.button:hover img.button0,a.button:active img.button0,a.button:link img.button1,a.button:visited img.button1,a.button:hover img.button1,a.button:active img.button1{background-color:#F2F3EE;border-top:solid 1px black;border-left:solid 1px black;border-right:solid 1px white;border-bottom:solid 1px white}
+.zmiHSep{background-color:#B6B4B6;border-bottom:#E6E4E6 solid 1px}
+.zmiVSep{background-color:#B6B6B6;border-right:solid #E6E4E6 1px;height:22px;width:1px}
+#ZMIManageTabsBar{background:url(/misc_/zms/get_logo_gradient.png) top right repeat-y;height:30px}
+#ZMIManageTabsContainer{clear:both}
+#ZMIManageTabsButtons{float:left;display:inline;list-style-type:none;height:15px !important;padding:0;margin:7px 0 0 0;overflow:hidden}
+#ZMIManageTabsButtons li{float:left;display:inline;padding:0;margin:0;border:0;overflow:hidden}
+#ZMIManageTabsButtons li.on{border:1px solid #BBB;background-color:white}
+#ZMIManageTabsButtons li a,#ZMIManageTabsButtons li span{float:left;display:inline;padding:0;margin:0}
+.ZMIManageBody{padding:10px;margin-top:0!important}
+td input.ui-button{padding:2px 6px !important;margin:3px 0px 0px 0px;color:#222 !important;font-weight:normal !important}
+.zmi-form-section.ui-accordion,.zmi-form-section.ui-widget-header{margin-top:4px}
+.zmi-form-section.ui-widget-content{margin-top:4px;padding:4px}
+.zmi-accordion-headline{margin-left:30px}
+.zmi-tabs ul li{float:left;margin-right:1em}
+.zmi-tabs .zmi-tabs-active a{font-weight:bold!important}
+.zmi-tabs ul li span{float:left}
+.datepicker,.datetimepicker{background:white url(/misc_/zms/calendar.png) top right no-repeat}
+.zmiDisplayIcon{margin:2px;width:16px;height:16px;border:none;vertical-align:middle}
+.form-disabled{font-family:Arial,sans-serif;font-size:12px;color:gray}
+.form-small *{font-size:11px}
+.form-small,select.form-small,input.form-small,textarea.form-small{font-size:11px!important;font-family:Arial,sans-serif!important;font-weight:normal;color:#222}
+.collectionBtn{width:40px}
+.form-small-disabled{font-family:Arial,sans-serif;font-size:11px;color:gray}
+.form-fixed{font-family:Courier New,Courier,monospace;font-size:11px;color:black;background-color:#f4f4f4}
+.form-fixed-disabled{font-family:Courier New,Courier,monospace;font-size:11px;color:gray;background-color:#f4f4f4}
+.form-radio,.form-checkbox{border:none;background-color:transparent}
+.form-help{font-size:11px;padding:4px 6px 0px 6px}
+p.teaser,span.teaser{font-size:11px;margin:2px;padding:2px;width:100%}
+p.title,span.title{margin:2px;padding:2px;width:100%}
+form{border:none;margin:0}
+textarea.form-element,input.form-element,select.form-element,textarea.form-small,input.form-small,select.form-small{font-family:Arial,sans-serif!important;border:1px solid #666!important}
+textarea{border:1px solid #666;color:black;width:88%;padding:0.1em}
+input{font:100% Arial,sans-serif;border:1px solid #666;color:black;vertical-align:middle;margin-bottom:1px;padding:0.1em}
+select{font:100% Arial,sans-serif;border:1px solid #666;color:black;vertical-align:top}
+input.lazy{width:26em}
+.zmiDivOpaque{background-color:white;filter:Alpha(opacity=85);-moz-opacity:0.85;opacity:0.85}
+div#tabs,div#tabs ul.ui-tabs-nav{float:left}
+div#tabs a{padding-left:0.9em;padding-right:0.9em}
+div#tabs_sub a{color:white!important}
+div.zmi-tabs.ui-widget-header{height:24px!important}
+div.zmi-tabs.ui-widget-header ul.ui-tabs-nav{padding-top:4px!important}
+div.ui-tabs{margin:0;padding:0;border:0;background:transparent}
+ul.ui-tabs-nav{margin:0;padding:0;border:0;background:transparent}
+ul.ui-tabs-nav a{font-family:Arial,sans-serif;font-size:11px !important;font-weight:normal;text-decoration:none}
+.ui-widget-header{vertical-align:middle;padding:2px 4px 2px 4px}
+div.zmi-icon{margin:0;padding:0;width:16px}
+ul.zmi-icons,ul#icons,ul.icons{margin:0;padding:0}
+ul.zmi-icons li,ul#icons li,ul.icons li{position:relative;margin:2px 2px 4px 2px;padding:0;cursor:pointer;float:left;list-style:none}
+ul.zmi-icons span.ui-icon,ul#icons span.ui-icon{float:left;margin:0}
+.ui-button{position:static!important}
+.ui-accordion-content{margin:0!important;padding:4px!important}
 .ui-helper-hidden{display:none}
 .ui-helper-hidden-accessible{position:absolute !important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}
