--- a/ZMS/trunk/plugins/www/manage_page_style-min.css
+++ b/ZMS/trunk/plugins/www/manage_page_style-min.css
@@ -57,6 +57,7 @@ img#zmibg{z-index:-1000;width:100%;height:101%;position:absolute;top:0;left:0}
 .zmi-document-margin span#strong{font-weight:bold;cursor:pointer;text-decoration:underline}
 .zmi-document-margin select{background:#777;color:#fff;font-size:10px;border:1px solid #ccc;margin-top:-3px}
 .zmi-document-margin div.zmi_col_left,.zmi-document-margin div.zmi_col_right{margin:3px}
+img.grippy{width:6px!important;height:14px!important;background:url(/misc_/zms/grippy.png);vertical-align:middle;cursor:move}
 .zmiContainerColLeft{border-bottom:1px solid #CCC;background:filter:Alpha(opacity=80);-moz-opacity:0.80;opacity:0.80;width:200px}
 .zmiContainerColCenter{border-bottom:1px solid #FFF;background:#FFF filter:Alpha(opacity=85);-moz-opacity:0.85;opacity:0.85}
 .zmiContainerColRight{border-bottom:1px solid #FFF;background:#E2E3DE filter:Alpha(opacity=85);-moz-opacity:0.85;opacity:0.85;width:100px}
