--- a/ZMS/trunk/plugins/www/manage_page_style-min.css
+++ b/ZMS/trunk/plugins/www/manage_page_style-min.css
@@ -105,7 +105,8 @@ td input.ui-button{padding:2px 6px !important;margin:3px 0px 0px 0px;color:#222 
 p.teaser,span.teaser{font-size:11px;margin:2px;padding:2px;width:100%}
 p.title,span.title{margin:2px;padding:2px;width:100%}
 form{border:none;margin:0}
-textarea.form-element,input.form-element,select.form-element,textarea.form-small,input.form-small,select.form-small{font-family:Arial,sans-serif!important;border:1px solid #666!important}
+textarea.form-element,input.form-element,select.form-element,textarea.form-small,input.form-small,select.form-small{font-family:Arial,sans-serif!important;border:1px solid #666!important;border-bottom:1px solid #CCC!important;border-left:1px solid #CCC!important;border-right:1px solid #CCC!important}
+textarea.form-element.form-element-focus,input.form-element.form-element-focus,select.form-element.form-element-focus,textarea.form-small.form-element-focus,input.form-small.form-element-focus,select.form-small.form-element-focus{border:2px solid #FFFFCC!important}
 textarea{border:1px solid #666;color:black;width:88%;padding:0.1em}
 input{font:100% Arial,sans-serif;border:1px solid #666;color:black;vertical-align:middle;margin-bottom:1px;padding:0.1em}
 select{font:100% Arial,sans-serif;border:1px solid #666;color:black;vertical-align:top}
