--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -599,6 +599,14 @@ textarea.form-element, input.form-element, select.form-element,
 textarea.form-small, input.form-small, select.form-small {
 	font-family: Arial, sans-serif!important;
 	border: 1px solid #666!important;
+	border-bottom: 1px solid #CCC!important;
+	border-left: 1px solid #CCC!important;
+	border-right: 1px solid #CCC!important;
+}
+
+textarea.form-element.form-element-focus, input.form-element.form-element-focus, select.form-element.form-element-focus,
+textarea.form-small.form-element-focus, input.form-small.form-element-focus, select.form-small.form-element-focus {
+	border: 2px solid #FFFFCC!important;
 }
 
 textarea {
