--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -668,3 +668,4 @@ ul.zmi-icons li, ul#icons li, ul.icons li { position: relative; margin: 2px 2px 
 ul.zmi-icons span.ui-icon, ul#icons span.ui-icon {float: left; margin: 0; }
 .ui-button {position:static!important;}
 .ui-accordion-content { margin:0!important; padding:4px!important; }
+#ZMSGraphic_extEdit_vslider.ui-slider-vertical { width:0.2em; }
