minor changes to ZMI

--- a/ZMS/trunk/plugins/www/manage_page_style.css
+++ b/ZMS/trunk/plugins/www/manage_page_style.css
@@ -268,8 +268,7 @@ img#zmibg {
 	text-decoration: underline;
 	color: #f90;
 }
-.zmi-document-margin span#strong {
-	font-weight:bold;
+.ui-helper-clickable {
 	cursor:pointer;
 	text-decoration:underline;
 }
