--- a/ZMS/trunk/plugins/www/manage_page_style-min.css
+++ b/ZMS/trunk/plugins/www/manage_page_style-min.css
@@ -54,7 +54,7 @@ img#zmibg{z-index:-1000;width:100%;height:101%;position:absolute;top:0;left:0}
 .zmi-document-margin{vertical-align:middle;background-color:#777;color:#eee;font-size:10px;height:20px;margin:0;padding:0}
 .zmi-document-margin a:link,.zmi-document-margin a:visited{text-decoration:none;color:#eee;font-size:10px}
 .zmi-document-margin a:hover{text-decoration:underline;color:#f90}
-.zmi-document-margin span#strong{font-weight:bold;cursor:pointer;text-decoration:underline}
+.ui-helper-clickable{cursor:pointer;text-decoration:underline}
 .zmi-document-margin select{background:#777;color:#fff;font-size:10px;border:1px solid #ccc;margin-top:-3px}
 .zmi-document-margin div.zmi_col_left,.zmi-document-margin div.zmi_col_right{margin:3px}
 img.grippy{width:6px!important;height:14px!important;background:url(/misc_/zms/grippy.png);vertical-align:middle;cursor:move}
@@ -127,6 +127,7 @@ ul.zmi-icons li,ul#icons li,ul.icons li{position:relative;margin:2px 2px 4px 2px
 ul.zmi-icons span.ui-icon,ul#icons span.ui-icon{float:left;margin:0}
 .ui-button{position:static!important}
 .ui-accordion-content{margin:0!important;padding:4px!important}
+#ZMSGraphic_extEdit_vslider.ui-slider-vertical{width:0.2em}
 .ui-helper-hidden{display:none}
 .ui-helper-hidden-accessible{position:absolute !important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .ui-helper-reset{margin:0;padding:0;border:0;outline:0;line-height:1.3;text-decoration:none;font-size:100%;list-style:none}
@@ -422,7 +423,6 @@ button.ui-button::-moz-focus-inner{border:0;padding:0}
 .ui-slider-horizontal .ui-slider-range-min{left:0}
 .ui-slider-horizontal .ui-slider-range-max{right:0}
 .ui-slider-vertical{width:.8em;height:100px}
-#ZMSGraphic_extEdit_vslider.ui-slider-vertical{width:.2em;}
 .ui-slider-vertical .ui-slider-handle{left:-.3em;margin-left:0;margin-bottom:-.6em}
 .ui-slider-vertical .ui-slider-range{left:0;width:100%}
 .ui-slider-vertical .ui-slider-range-min{bottom:0}
