added support for re-utilization of xstandard-styles in ckeditor

--- a/ZMS/trunk/plugins/www/ckeditor/contents.css
+++ b/ZMS/trunk/plugins/www/ckeditor/contents.css
@@ -14,6 +14,7 @@ body
 
 	/* Remove the background color to make it transparent */
 	background-color: #fff;
+	background-image:url(/misc_/zms/spacer.gif)!important;
 }
 
 ol,ul,dl
